<resources>
    <string name="app_name">Make My Day</string>
    <string name="header2">Let\'s make life simple</string>
    <string name="change_bounds">Change Bounds</string>
    <string name="title_activity_dashboard">MainActivity</string>
    <string name="title_tasks">Tasks</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notes">Notes</string>
    <string name="add">Add</string>
    <string name="add_notes">Add Notes</string>
    <string name="add_tasks">Add Tasks</string>
    <string name="save">Save</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_n_register_here">Don\'t have an account? \n Register here</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="enter_valid_mail">Please Enter a valid E-mail</string>
    <string name="forgot_pass_mail_sent">Password reset link has been sent to your mail</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_nlogin_here">Already have an account?\nLogin here</string>
    <string name="login_success">Logged in successfully</string>
    <string name="empty_pass_error">Password can\'t be empty</string>
    <string name="pass_less_length_error">Password can\'t be less than 5 chars</string>
    <string name="name_field_empty">Name field can\'t be empty</string>
    <string name="register_successfull">Registered successfully</string>
    <string name="login_to_save_notes">Login to save notes</string>
    <string name="warning">Warning</string>
    <string name="saved_to_database">Saved to database</string>
    <string name="disable_back_button">Back is disabled, wait for data to get saved</string>
    <string name="press_again_to_exit">Press again to exit</string>
    <string name="reminder_selected">Reminder selected</string>
    <string name="select_reminder">Select Reminder</string>
    <string name="before_date_error">Seems like we have to travel in time to past, sorry we don\'t deliver this service</string>
    <string name="current_date_error">Ohh No you selected current date, try some other dates</string>
    <string name="select_date">Please select a date</string>
    <string name="selected_valid_date">Please select a valid date</string>
    <string name="icon">Icon</string>
    <string name="created">Created</string>
    <string name="last_edited">Last Edited</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="updated_to_database">Updated to database</string>
    <string name="update_notes">Update Notes</string>
    <string name="add_task">Add Task</string>
    <string name="remind_me">Remind Me</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="set_date">Set Date</string>
    <string name="set_time">Set Time</string>
    <string name="yyyy_dd_mm">YYYY-DD-MM</string>
    <string name="reminder_tasks_amp_notes"><![CDATA[Reminder Tasks & Notes]]></string>
    <string name="login_to_view_tasks">Login to view your Tasks and Notes \n Click here to Login</string>
    <string name="no_reminders">No Reminders</string>
    <string name="channel_id">Tasker</string>
    <string name="welcome_new_user">Welcome, Start exploring our app by adding new notes/tasks</string>
</resources>