<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Splash">

    <ImageView
        android:id="@+id/img"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_above="@+id/header1"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_launcher_round"
        android:layout_marginBottom="135dp"/>

    <TextView
        android:id="@+id/header1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="32sp"
        android:layout_above="@+id/header2"/>

    <TextView
        android:id="@+id/header2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/header2"
        android:textSize="24sp"
        android:layout_above="@+id/next_bt"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/next_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="120dp"
        app:elevation="12dp"
        app:fabSize="normal"
        app:borderWidth="12dp"
        android:tag="Next"
        app:tint="@android:color/white"
        app:backgroundTint="@color/ic_launcher_background"
        android:src="@drawable/ic_baseline_arrow_forward_24"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:transitionName="@string/change_bounds"
        android:visibility="invisible"/>

</RelativeLayout>